--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@material/mwc-button": "^0.17.2",
     "@material/mwc-dialog": "^0.17.2",
     "@nuxtjs/axios": "^4.5.2",
+    "@octokit/core": "^3.1.0",
     "@octokit/rest": "^18.0.1",
     "@types/downloadjs": "^1.4.1",
     "ajv": "^6.5.4",
