--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
       "dom",
       "ES2018"
     ],
-    "module": "es2015",
+    "module": "esnext",
     "moduleResolution": "node",
     "experimentalDecorators": true,
     "noImplicitAny": false,
